<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".WelcomeVendor">


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_vendor"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView_AllItems"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@drawable/rectangle"
            android:gravity="center_horizontal"
            android:text="@string/all_items" />

        <TextView
            android:id="@+id/textView_OutOfStock"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/rectangle"
            android:gravity="center_horizontal"
            android:text="@string/out_of_stock"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_AddNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/add_new"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle" />

        <Button
            android:id="@+id/buttonUpload1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/imageView1"
            app:layout_constraintEnd_toEndOf="@+id/imageView1"
            app:layout_constraintStart_toStartOf="@+id/imageView1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle" />

        <Button
            android:id="@+id/buttonUpload2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rectangle" />

        <Button
            android:id="@+id/buttonUpload3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" />


        <TextView
            android:id="@+id/textView_Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:text="@string/category"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        <EditText
            android:id="@+id/EditText_Category"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_Category"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView_productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/product_name"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Category" />

        <EditText
            android:id="@+id/EditText_ProductName"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_productName"
            app:layout_constraintTop_toBottomOf="@+id/EditText_Category" />

        <TextView
            android:id="@+id/textView_PriceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Price Amount"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_productName" />

        <EditText
            android:id="@+id/editText_PriceAmount"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_PriceAmount"
            app:layout_constraintTop_toBottomOf="@+id/EditText_ProductName" />

        <TextView
            android:id="@+id/textView_GSTAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="GST Amount"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_PriceAmount" />

        <EditText
            android:id="@+id/editText_GstAmount"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toEndOf="@+id/textView_GSTAmount"
            app:layout_constraintTop_toBottomOf="@+id/editText_PriceAmount" />

        <TextView
            android:id="@+id/textView_DeliveryCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="Delivery Charges"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_GSTAmount" />

        <EditText
            android:id="@+id/editText_DeliveryCharges"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_DeliveryCharge"
            app:layout_constraintTop_toBottomOf="@+id/editText_GstAmount" />

        <TextView
            android:id="@+id/textView_Offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/offer"
            android:textColor="#2196F3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_DeliveryCharge" />

        <EditText
            android:id="@+id/editText_Offer"
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/box"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView_Offer"
            app:layout_constraintTop_toBottomOf="@+id/editText_DeliveryCharges" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded"
        android:text="Show Data"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textAllCaps="false"
        android:textSize="20sp"/>


</LinearLayout>
